Geanina: Messages should be in a card/message box to be easier to read, and text should be aligned correctly

--- a/src/components/feed/FeedStyle.css
+++ b/src/components/feed/FeedStyle.css
@@ -18,19 +18,26 @@ margin-top: 10px;
   flex-direction: column;
 } 
   
-  .ui.feed>.event.feedLeft {
-    align-self: flex-start; 
-    display: flex; 
-    flex-direction: row;
-    margin-top: 10px;
-  } 
+.ui.feed>.event.feedLeft {
+  align-self: flex-start; 
+  display: flex; 
+  flex-direction: row;
+  margin-top: 10px;
+} 
 
-  .ui.feed>.event.feedRight {
-    align-self: flex-end;
-    margin-top: 10px;
-  } 
-  .feedMessage {
-    margin-top: 20px;
-    text-align: left;
-  } 
-
+.ui.feed>.event.feedRight {
+  align-self: flex-end;
+  margin-top: 5px;
+} 
+.feedMessage {
+  margin-top: 7px;
+  text-align: left;
+  font-size: small;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif; 
+}
+ 
+.lableStyle {
+  text-align: left; 
+  font-size: x-small; 
+  text-decoration-color: gray;
+}
